# Prueba-de-Algoritmos

./: README.md
Hormigas/: README.md  pyproject.toml
Hormigas/scripts/: capture_readme_screenshots.py
Hormigas/src/hormigas/: __init__.py  __main__.py  ants.py  config.py  draw.py  main.py  models.py  world.py
LaberintoVecinos/: README.md  pyproject.toml
LaberintoVecinos/scripts/: capture_readme_screenshots.py
LaberintoVecinos/src/laberinto_vecinos/: __init__.py  __main__.py  config.py  draw.py  main.py  maze.py  models.py  search.py
Sorting_race/: pyproject.toml
Sorting_race/scripts/: capture_readme_screenshots.py
Sorting_race/src/sorting_race/: __init__.py  __main__.py  config.py  draw.py  main.py  models.py
Sorting_race/src/sorting_race/sorts/: __init__.py  bubble.py  insertion.py  merge.py  quick.py
