[project]
name = "sorting-race"
version = "0.1.0"
description = "Carrera visual de algoritmos de ordenamiento (Pygame) para clase"
readme = "README.md"
authors = [
    { name = "andres-insuasty-itti", email = "german.insuasty@itti.digital" }
]
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6.1",
]

[project.scripts]
sorting-race = "sorting_race.main:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
